--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 </dependency>
 
 </dependencies>
-  <plugin>
+ <build>
+<plugins>
+<plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
@@ -46,4 +48,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
        </executions>
 
 </plugin>
+</plugins>
+</build>
+
 </project>
