--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
-            <mainClass>com.places.Main</mainClass>
+            <mainClass>springboot.first_app.App</mainClass>
         </configuration>
 
         <executions>
